--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "dependencies": {
     "@airstack/airstack-react": "^0.4.5",
+    "@openzeppelin/contracts": "^4.9.2",
+    "@truffle/hdwallet-provider": "^2.1.13",
     "body-parser": "^1.18.2",
+    "dotenv": "^16.3.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "nodemon": "^1.14.12"
