--- a/.env_example
+++ b/.env_example
@@ -5,3 +5,5 @@ WALLET_PRIVATE_KEY=
 INFURA_IPFS_PROJECT_ID= 
 INFURA_IPFS_PROJECT_SECRET= 
 AIRSTACK_API_KEY=
+BLOCK_SCOUT_API_KEY=
+ETHERSCAN_PRIVATE_KEY=
