--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
+    "truffle-plugin-verify": "^0.6.4"
   }
 }
