--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "nodemon": "^1.14.12",
-    "truffle-plugin-verify": "^0.6.4"
+    "truffle-plugin-verify": "^0.6.4",
+    "wagmi": "^1.3.9"
   }
 }
