--- a/frens_wagmi/tsconfig.json
+++ b/frens_wagmi/tsconfig.json
@@ -16,5 +16,5 @@
     "target": "ESNext",
     "useDefineForClassFields": true
   },
-  "include": ["./src"]
+  "include": ["./src", "../frens_test_wagmi/src/ABI.js"]
 }
